# Time_IQ_Auth_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
requirements/: requirements.txt
src/api/rest/: app.py  dependencies.py
src/api/rest/routes/: Auth_routes.py  user_routes.py
src/config/: settings.py
src/core/services/: auth_services.py  jwt_service.py  user_service.py
src/data/clients/: postgres_client.py
src/data/migrations/alembic/: env.py
src/data/migrations/alembic/versions/: f4f2cc153469_initial_tables.py
src/data/models/postgres/: __init__.py  role_model.py  session_model.py  user_model.py
src/data/repositories/: role_repository.py  session_repository.py  user_repository.py
src/observability/logging/: logging.py
src/schemas/: auth_schema.py  user_schema.py
src/static/: admin.html
src/utils/: id_generator.py  otp_store.py  password_hashing.py  role_seed.py
