[project]
name = "time-iq-auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.133.1",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "idna==3.11",
    "librt==0.8.1",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "passlib[bcrypt]==1.7.4",
    "pathspec==1.0.4",
    "psycopg2-binary>=2.9.11",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pydantic[email]==2.12.5",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.47",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.41.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
ignore = ["B008"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
